# Kraft_PC

CADs_Torre/DWGs/: Linea.dwg  Parte 1.dwg  Parte 2.dwg  Parte 6.dwg
CADs_Torre/STLs partes/: 1.STL  2.STL  3.STL
CADs_Torre/STLs partes/Descentradas/: 1.stl
Red_Electrica/: instrucciones
Red_Electrica/CADs_Torre/: Torre d4a3-ad_ed.e_v3.dxf  Torre d4s1-ad_ed.e_v3.dxf
Red_Electrica/CADs_Torre/DWGs/: Parte 3.dwg  Parte 4.dwg  Parte 5.dwg  Torre.dwg
Red_Electrica/CADs_Torre/STLs partes/: 4.STL  5.STL  6.STL
Red_Electrica/CADs_Torre/STLs partes/Descentradas/: 2.stl  3.stl  4.stl  5.STL  6.STL
Red_Electrica/helicoptero/: CMakeLists.txt
Red_Electrica/helicoptero/launch/: demo_helicoptero.launch  landscape.launch  spawn_quadrotor_modified.launch
Red_Electrica/helicoptero/urdf/: quadrotor_modified.gazebo.xacro  quadrotor_modified.urdf.xacro
helicoptero/: package.xml
helicoptero/urdf/: quadrotor_modified_base.urdf.xacro
helicoptero/worlds/: empty_sky.world
kraft/kraft_connect/: CMakeLists.txt  package.xml
kraft/kraft_connect/include/: udp_config.hpp
kraft/kraft_connect/launch/: connect.launch
kraft/kraft_connect/src/: udp_receiver.cpp  udp_sender.cpp
kraft/kraft_control/: CMakeLists.txt  package.xml
kraft/kraft_control/config/: kraft_control_force.yaml  kraft_control_position.yaml
kraft/kraft_control/launch/: kraft_control.launch  kraft_rqt.launch
kraft/kraft_description/: CMakeLists.txt  package.xml
kraft/kraft_description/launch/: kraft.rviz  kraft_rviz.launch
kraft/kraft_description/urdf/: common.xacro  ftsensor.xacro  jaw_gripper.xacro  kraft.urdf  kraft.xacro  kraft.xml  kraft_xacrotourdf.urdf  materials.xacro  serial_arm.xacro
kraft/kraft_move/: CMakeLists.txt  package.xml
kraft/kraft_move/launch/: kraft_move.launch
kraft/kraft_move/src/: kraft_move.cpp
kraft/kraft_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kraft/kraft_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kraft.srdf  ompl_planning.yaml
kraft/kraft_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kraft_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kraft/kraft_planner/: CMakeLists.txt  package.xml
kraft/kraft_planner/scripts/: client.py  client_old.py  server.py
kraft/kraft_planner/src/: kraft_connect.cpp  kraft_manipulate.cpp  kraft_planner.cpp  kraft_planner_openrave.cpp  kraft_planner_tracik.cpp  test_points.cpp
kraft/kraft_planner/src/points/: README
kraft/kraft_planner/src/points/v1/: ik.csv  ik.xlsx  mth.csv  mth.xlsx  mth_orig.xlsx  out.csv
kraft/kraft_planner/src/points/v2/: ik.csv  ik.xlsx  mth.csv  mth.xlsx  mth_orig.xlsx  out.csv  out.xlsx
kraft/kraft_teleop/: CMakeLists.txt  package.xml
kraft/kraft_teleop/src/: kraft_teleop.cpp
kraft/kraft_worlds/: CMakeLists.txt  package.xml
kraft/kraft_worlds/launch/: dexterity_test.launch  kraft_world.launch
kraft/kraft_worlds/models/test_axis/: model.config  model.sdf
kraft/kraft_worlds/worlds/: kraft_setup.world
kraft/virtualbox_comms/msg/: velocity.msg
kraft/virtualbox_comms/src/: start_comms.cpp  udp_client_server.cpp
virtualbox_comms/: CMakeLists.txt  package.xml
virtualbox_comms/include/: udp_client_server.h
virtualbox_comms/msg/: JointState.msg
