<?xml version="1.0"?>
<package>
  <name>kraft_control</name>
  <version>0.0.0</version>
  <description>The kraft_control package</description>

  <maintainer email="dvargasfr@gmail.com">David Vargas</maintainer>

  <license>BSD</license>

  <author email="dvargasfr@gmail.com">David Vargas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
