<?xml version="1.0"?>
<package>
    <name>kraft_planner</name>
    <version>0.0.0</version>
    <description>The kraft_planner package</description>
    <maintainer email="david@todo.todo">david</maintainer>

    <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>

  </export>
</package>
