<?xml version="1.0"?>
<package>
    <name>kraft_teleop</name>
    <version>0.0.0</version>
    <description>The kraft_teleop package</description>
    <maintainer email="david@todo.todo">david</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>genmsg</buildtool_depend>

    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <!--build_depend>std_msgs</build_depend-->
    <!--build_depend>genmsg</build_depend-->

    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <!--run_depend>std_msgs</run_depend-->
    <!--run_depend>genmsg</run_depend-->

    <export>
    </export>
</package>
